<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lesson3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/kozha11">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/HomeWorkText"
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:layout_marginTop="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="12"
            android:id="@+id/editText"
            android:textAlignment="viewStart"
            android:hint="@string/textForSend"
             />

        <Button
            android:text="@string/btnSendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendText"
            android:layout_marginTop="10dp"
            android:textSize="12sp" />






    </LinearLayout>

</RelativeLayout>
